--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,6 @@ layout: default
 {% endif %}
 </header>
 
-<div class="container shadow p-5 mb-5 bg-white border-top rounded">
+<div class="container shadow p-3 mb-5 bg-white rounded">
   {{ content }}
 </div>
