--- a/_sass/spacing.scss
+++ b/_sass/spacing.scss
@@ -24,3 +24,12 @@ body {
 .footer div {
 	height: 200px;
 }
+
+.content-container {
+	min-height: 50vh;
+}
+
+.page-rule {
+	margin-top: 10px;
+	border: 1px solid #9a2617;
+}
