--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,10 +10,13 @@
           <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
         </li>
         <li class="nav-item mr-5">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+          <a class="nav-link" href="{{ "/projects" | relative_url }}">Projects</a>
         </li>
         <li class="nav-item mr-5">
-          <a class="nav-link" href="{{ "/projects" | relative_url }}">Projects</a>
+          <a class="nav-link" href="{{ "/academics" | relative_url }}">Academics</a>
+        </li>
+        <li class="nav-item mr-5">
+          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts/Misc</a>
         </li>
         <li class="nav-item mr-5">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
