--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,12 +4,12 @@ layout: default
 
 {% if page.background %}
 <header>
-  <div class="container" style="height: 300px; background-image: url('{{page.background | relative_url}}');">
+  <div class="container" style="height: 230px; background-image: url('{{page.background | relative_url}}');">
     <div class="d-flex flex-row align-items-center justify-content-center h-100">
       <div class="typewriter">
         <h1 class="page_heading">
           {{ page.title | upcase }}
-        </h1><hr/>
+        </h1>
         {% if page.description %}
           <p class="page_subheading">{{ page.description }}</p>
         {% endif %}   
@@ -18,12 +18,12 @@ layout: default
   </div>
 {% else %}
 <header>
-  <div class="container" style="height: 300px;">
+  <div class="container" style="height: 230px;">
     <div class="d-flex flex-row align-items-center justify-content-center h-100">
       <div class="typewriter">
         <h1 class="page_heading">
           {{ page.title | upcase }}
-        </h1><hr/>
+        </h1>
         {% if page.description %}
           <p class="page_subheading">{{ page.description }}</p>
         {% endif %}   
@@ -33,6 +33,7 @@ layout: default
 {% endif %}
 </header>
 
-<div class="container shadow p-5 mb-5 bg-white border-top rounded">
+<div class="container shadow-lg p-5 mb-5 bg-white border-top rounded content-container">
+  <hr class="page-rule">
   {{ content }}
 </div>
