--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
 
 {% include head.html %}
 
-<body background="/img/back1.jpg">
-
+<!-- <body background="/img/back1.jpg"> -->
+<body>
   {% include navbar.html %}
   <div class="container-fluid" id="main">
 	  {{ content }}
