--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,30 +4,41 @@ layout: default
 
 {% if page.background %}
 <header>
-  <div class="container" style="max-height: 230px; background-image: url('{{page.background | relative_url}}');">
+  <div class="container" style="height: 230px; background-image: url('{{page.background | relative_url}}');">
     <div class="d-flex flex-row align-items-center justify-content-center h-100">
-      <div class="">
-        <h1 class="page_heading">
-          {{ page.title | upcase }}
-        </h1>  
+      <div class="typewriter">
+        <h1 class="prompt">
+          user@site:~$echo "hi, there\n"user@site:~$hi, there
+        </h1>
+        {% if page.description %}
+          <p class="page_subheading">{{ page.description }}</p>
+        {% endif %}   
       </div>
     </div>
   </div>
 {% else %}
 <header>
-  <div class="container mt-5" style="max-height: 230px;">
-    <div class="d-flex flex-row align-items-center justify-content-center h-100">
-      <div class="">
-        <h1 class="page_heading">
-          {{ page.title | upcase }}
-        </h1>
+  <div class="container" style="height: 230px; padding: 0 0 10px 0;">
+    <div class="d-flex flex-column align-items-start justify-content-end h-100">
+      <div class="d-flex flex-row align-items-center">
+        <h1 class="prompt">user@site:</h1>
+        <div class="command">
+          <h1 class="page_heading">
+            cat projects/{{ page.title | downcase | replace: ' ', '_' }}
+          </h1>  
+        </div>
+      </div>
+      <div class="d-flex flex-row align-items-center">
+        {% if page.description %}
+          <p class="page_heading command_output">DESCRIPTION: {{ page.description | downcase }}</p>
+        {% endif %} 
       </div>
     </div>
   </div>
 {% endif %}
 </header>
 
-<div class="container shadow-lg p-5 mb-5 bg-white border-top rounded content-container">
+<div class="container shadow-lg p-5 mb-5 bg-white rounded content-container">
   <hr class="page-rule">
   {{ content }}
 </div>
