creating new branch for new theme

--- a/_sass/color.scss
+++ b/_sass/color.scss
@@ -3,7 +3,8 @@ i {
 }
 
 body, footer {
-	background-color: #300a24;
+    //background-color: #300a24;
+    background-color: #000000;
 }
 
 .prompt {
