--- a/_sass/headings.scss
+++ b/_sass/headings.scss
@@ -9,17 +9,25 @@
 }
 
 .page_heading {
-	font-size: 24px;
+	font-size: 1em;
 	letter-spacing: .10em;
 	text-align: center;
 }
 
 .prompt {
-	font-size: 24px;
+	font-size: 1em;
 	letter-spacing: .10em;
 	font-weight: bold;
 	text-align: center;
 	margin: 0 0;
+}
+
+.ascii_logo p {
+	font-size: 0.6em;
+	font-family: monospace;
+	line-height: 0.1em;
+	letter-spacing: 0.3em;
+	color: white;
 }
 
 .description-content {
