dark mode, neon light theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- <div style="height: 200px; width: 100%;"></div> -->
 <footer class="footer">
-    <div class="container-fluid bg-dark mt-auto">
+    <div class="container-fluid mt-auto">
       <div class="row ">
         <div class="col-md-10 col-lg-8 mx-auto pt-3">
           <ul class="list-inline text-center">
