--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
 {% include head.html %}
 
-<body background="/img/back1.jpg">
+<body background="/img/bac.jpg">
 
   {% include navbar.html %}
   <div class="container-fluid" id="main">
