--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -27,7 +27,7 @@ layout: default
 {% endif %}
 </header>
 
-<div class="container shadow-lg p-5 mb-5 bg-white border-top rounded content-container">
+<div class="container shadow-lg p-5 mb-5 rounded content-container">
   <hr class="page-rule">
   {{ content }}
 </div>
