--- a/_sass/spacing.scss
+++ b/_sass/spacing.scss
@@ -31,5 +31,6 @@ body {
 
 .page-rule {
 	margin-top: 10px;
-	border: 1px solid #9a2617;
+    border: 1px solid #9a2617;
+    //box-shadow: 0 0 2px 2px #9a2617;
 }
