--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="main_nav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="main_nav">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
