--- a/_sass/color.scss
+++ b/_sass/color.scss
@@ -1,3 +1,13 @@
+a, a:hover {
+    text-decoration: none;
+    color: #3f607f;
+}
+
 i {
 	color: #ffffff;
+}
+
+body {
+    background-color: #000000;
+    color: #c22d19;
 }
