--- a/_sass/headings.scss
+++ b/_sass/headings.scss
@@ -1,22 +1,27 @@
 
 .list_item_heading {
-	color: #829356;
+    color: #829356;
+    font-size: 2em;
 	font-weight: normal;
 }
 
 .list_item_subheading {
-	color: #000000;
+    color: #ffffff;
+    font-size: 1em;
 }
 
 .page_heading {
 	font-size: 72px;
-	font-weight: bold;
-	color: #9a2617;
-	text-align: center;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;   
+	color: #ffffff;
+    text-align: center;
+    text-shadow: 0px 0px 35px #00FF33;
+    //border: 5px solid #ffffff;
 }
 
 .description-content {
-	font-size: 16px;
+	font-size: 18px;
 }
 
 .description-content:first-letter {
